setup/deployments/cloud-fund-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cloud-fund-ingress
  annotations:
    ingress.bluemix.net/redirect-to-https: 'True'
spec:
  rules:
    - host: cloud-fund.mycluster-138429-e7b9f0d14700d5478c54256249ff5e85-0000.us-south.containers.appdomain.cloud
      http:
        paths:
          - backend:
              serviceName: cloud-fund-frontend-service
              servicePort: 3000
            path: /
          - backend:
              serviceName: cloud-fund-bff-service
              servicePort: 8000
            path: /auth
          - backend:
              serviceName: cloud-fund-bff-service
              servicePort: 8000
            path: /ibm
          - backend:
              serviceName: cloud-fund-bff-service
              servicePort: 8000
            path: /donate
          - backend:
              serviceName: cloud-fund-bff-service
              servicePort: 8000
            path: /transactions
          - backend:
              serviceName: cloud-fund-bff-service
              servicePort: 8000
            path: /sponsor
          - backend:
              serviceName: cloud-fund-bff-service
              servicePort: 8000
            path: /sponsors
  tls:
    - hosts:
        - cloud-fund.mycluster-138429-e7b9f0d14700d5478c54256249ff5e85-0000.us-south.containers.appdomain.cloud
      secretName: mycluster-138429-e7b9f0d14700d5478c54256249ff5e85-0000
